# Capstone-design_Ratio

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/indoornavigationapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/jsons/: coordinate.json
app/src/main/cpp/: CMakeLists.txt  apriltag_native_lib.c  opencv_native_lib.cpp
app/src/main/cpp/apriltag/: apriltag.c  tagStandard52h13.c
app/src/main/java/com/example/indoornavigationapp/: MainActivity.kt
app/src/main/java/com/example/indoornavigationapp/listener/: TagDetectionListener.kt
app/src/main/java/com/example/indoornavigationapp/model/: Tag.kt
app/src/main/java/com/example/indoornavigationapp/repository/: MemoryTagRepository.kt  TagRepository.kt
app/src/main/java/com/example/indoornavigationapp/view/: ApriltagCamera2View.java  CameraBridgeViewBaseImpl.java
app/src/main/java/com/example/indoornavigationapp/view/camera/: CameraFragment.kt  CameraViewModel.kt
app/src/main/java/com/example/indoornavigationapp/view/entry/: EntryFragment.kt
app/src/main/java/com/example/indoornavigationapp/view/opengl/: MapComponent.kt  MyGLRenderer.kt  MyGLSurfaceView.kt  Octagon.kt  OpenGLActivity.kt  Polygon.kt  Square.kt  Triangle.kt
app/src/main/java/com/example/indoornavigationapp/view/opengl/testPolygon/: Square.kt  Triangle.kt
app/src/main/java/com/example/indoornavigationapp/view/search/: SearchFragment.kt
app/src/main/java/com/example/indoornavigationapp/view/settings/: SettingsFragment.kt
app/src/main/res/layout/: activity_main.xml  fragment_camera.xml  fragment_entry.xml  fragment_search.xml  fragment_settings.xml
app/src/main/res/navigation/: nav_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/indoornavigationapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
sdk/java/src/apriltag/: ApriltagDetection.java  ApriltagNative.java  CameraPosEstimation.java  OpenCVNative.java
